# conference-hosting

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: deploy-docs-site.yml  opencode-pr-review.yml  opencode.yml  release-macos-on-tag.yml
.opencode/skills/gpui/: SKILL.md
apps/host-app-gpui/: Cargo.toml  build.rs
apps/host-app-gpui/assets/icons/: app-taskbar-logo.icns
apps/host-app-gpui/scripts/: build_app_icons.sh  package_macos_app.sh
apps/host-app-gpui/src/: assets.rs  gateway_runtime.rs  main.rs
apps/host-app-gpui/src/app/: config.rs  mod.rs  persistence.rs  shell.rs  state.rs
apps/host-app-gpui/src/components/: icon.rs  mod.rs  ui.rs
apps/host-app-gpui/src/features/: mcp_servers.rs  mod.rs  settings.rs
apps/host-app-gpui/src/features/audio/: mod.rs  view.rs
apps/host-app-gpui/src/features/chat/: mod.rs  panel.rs  view.rs
apps/host-app-gpui/src/mcp/: mod.rs
apps/host-app-gpui/src/widgets/: text_input.rs
crates/host-core/: Cargo.toml
crates/host-core/src/: lib.rs  protocol.rs
crates/host-platform/: Cargo.toml
crates/host-platform/src/: lib.rs  ws_gateway.rs
docs/: ai_meeting_hosting_design.md  mcp_server_management_design.md
docs-stie/: next.config.mjs
docs-stie/app/: globals.css  layout.tsx  page.tsx
docs-stie/app/mockup/: page.tsx
docs-stie/components/: architecture-section.tsx  design-principles-section.tsx  features-section.tsx  footer.tsx  hero-section.tsx  modularity-section.tsx  navigation.tsx  performance-section.tsx  platform-section.tsx  protocol-section.tsx  roadmap-section.tsx
docs-stie/components/desktop/: chat-panel.tsx  desktop-app-mockup.tsx  settings-panel.tsx  sidebar.tsx  status-bar.tsx  window-chrome.tsx
