[package]
name = "host-app-gpui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
cpal.workspace = true
gpui.workspace = true
host-core = { path = "../../crates/host-core" }
host-platform = { path = "../../crates/host-platform" }
opus.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
