[package]
name = "host-app-gpui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[dependencies]
aec3.workspace = true
cpal.workspace = true
gpui.workspace = true
gpui-component.workspace = true
host-core = { path = "../../crates/host-core" }
host-platform = { path = "../../crates/host-platform" }
mac_address.workspace = true
opus.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
rmcp.workspace = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
